[package]
name = "github-actions-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.27"
linq = "0.0.1-release"
actix-web="4"
querystring = "1.1.0"
reqwest = "0.11.14"
tokio = {version= "1.26.0", features=["full"]}
serde_urlencoded = "0.7.1"
serde = {version="1.0.156", features=["derive"]}
serde_json = "1.0.94"
qstring = "0.7.2"
serde_derive = "1.0.156"
